--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,19 @@
 
 \maketitle
 
-\input{hom-algebra.tex}
+\section{Varieties}
+
+\subsection{Affine Varieties}
+\input{solutions/chapter1/section1/main.tex}
+\subsection{Projective Varieties}
+\input{solutions/chapter1/section2/main.tex}
+\subsection{Morphisms}
+\input{solutions/chapter1/section3/main.tex}
+
+\section{Schemes}
+
+\subsection{Sheaves}
+\input{solutions/chapter2/section1/main.tex}
 
 \end{document}
 
